@@ -1,53 +1,97 @@
 package com.example.api.security;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
+/**
+ * Spring Security設定クラス
+ * JWT認証を使用したセキュリティ設定を行います
+ */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-            .csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .authorizeHttpRequests(auth -> auth
-                // ★修正: "/api/auth/**" を追加して、v1なしのパスも許可します
-                .requestMatchers(
-                    "/api/v1/rankings/**", 
-                    "/api/v1/auth/**", 
-                    "/api/auth/**",       // <--- これを追加！
-                    "/login", 
-                    "/register"
-                ).permitAll()
-                .anyRequest().authenticated()
-            );
+    @Autowired
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
 
-        return http.build();
-    }
-
+    /**
+     * CORS設定
+     * Spring Security用のCORS設定を行います
+     * @return CorsConfigurationSource
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // 開発用に全オリジン許可
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        // allowCredentials(true)と組み合わせる場合はallowedOriginPatternsを使用
+        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    /**
+     * セキュリティフィルターチェーンの設定
+     * @param http HttpSecurityオブジェクト
+     * @return SecurityFilterChain
+     * @throws Exception 設定エラー
+     */
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+                // CSRF保護を無効化（JWTを使用するため）
+                .csrf(csrf -> csrf.disable())
+
+                // CORS設定を有効化
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // セッションを使用しない（ステートレス認証）
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // エンドポイントのアクセス権限設定
+                .authorizeHttpRequests(auth -> auth
+                        // CORSプリフライトリクエストを許可
+                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
+                        // 認証不要のエンドポイント
+                        .requestMatchers("/api/auth/register").permitAll()
+                        .requestMatchers("/api/auth/login").permitAll()
+                        .requestMatchers("/api/auth/refresh").permitAll()
+                        .requestMatchers("/api/auth/validate").permitAll()
+                        .requestMatchers("/api/upload/**").permitAll()
+                        .requestMatchers("/uploads/**").permitAll()
+                        .requestMatchers("/audio/**").permitAll() // TTS音声ファイル
+                        .requestMatchers("/ws/**").permitAll() // WebSocketエンドポイント
+                        .requestMatchers("/app/**").permitAll() // STOMP送信先
+                        .requestMatchers("/topic/**").permitAll() // STOMPブロードキャスト
+                        .requestMatchers("/queue/**").permitAll() // STOMPキュー
+                        .requestMatchers("/actuator/**").permitAll()
+                        .requestMatchers("/hello").permitAll()
+                        .requestMatchers("/samples/**").permitAll()
+                        .requestMatchers("/api/dev/**").permitAll() // 開発用エンドポイント
+                        .requestMatchers("/api/vocabulary/**").permitAll() // ★追加: 単語帳API
+                        // その他のエンドポイントは認証が必要
+                        .anyRequest().authenticated()
+                )
+
+                // JWTフィルターをUsernamePasswordAuthenticationFilterの前に追加
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
     }
 }
